--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/draft-js": "^0.11.16",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@types/react-draft-wysiwyg": "^1.13.7",
@@ -25,7 +26,6 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "typescript": "^5.2.2",
-        "vite": "^5.0.8",
-        "@types/draft-js": "^0.11.16"
+        "vite": "^5.0.8"
     }
 }
