--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dependencies": {
         "draft-js": "^0.11.7",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "sonner": "^1.3.1",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@types/draft-js": "^0.11.16",
