--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,14 +4,14 @@ on:
         branches:
             - master
 jobs:
-    Explore-GitHub-Actions:
+    Deploy-to-VPS:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js
               uses: actions/setup-node@v1
               with:
-                  node-version: '12.x'
+                  node-version: '20'
             - run: npm i
             - run: npm run build --if-present
               env:
