--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Copy folder content recursively to vps
               uses: garygrossgarten/github-action-scp@release
               with:
-                  local: build/dist
+                  local: build
                   remote: /var/www/portle-assignment
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USERNAME }}
